@@ -98,19 +98,33 @@ void
 ioinit(void)
 {
 
-  UCSRB = _BV(TXEN);		/* tx enable */
+#if SYSCLK <= 1000000UL
+  /*
+   * Note [4]
+   * Slow system clock, double Baud rate to improve rate error.
+   */
+  UCSRA = _BV(U2X);
+  UBRR = (SYSCLK / (8 * 9600UL)) - 1; /* 9600 Bd */
+#else
   UBRR = (SYSCLK / (16 * 9600UL)) - 1; /* 9600 Bd */
+#endif
+  UCSRB = _BV(TXEN);		/* tx enable */
 
   /* initialize TWI clock: 100 kHz clock, TWPS = 0 => prescaler = 1 */
 #if defined(TWPS0)
   /* has prescaler (mega128 & newer) */
   TWSR = 0;
 #endif
+
+#if SYSCLK < 3600000UL
+  TWBR = 10;			/* smallest TWBR value, see note [5] */
+#else
   TWBR = (SYSCLK / 100000UL - 16) / 2;
+#endif
 }
 
 /*
- * Note [4]
+ * Note [6]
  * Send character c down the UART Tx, wait until tx holding register
  * is empty.
  */
@@ -126,7 +140,7 @@ uart_putchar(char c)
 }
 
 /*
- * Note [5]
+ * Note [7]
  *
  * Read "len" bytes from EEPROM starting at "eeaddr" into "buf".
  *
@@ -152,7 +166,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
   sla = TWI_SLA_24CXX | (((eeaddr >> 8) & 0x07) << 1);
 
   /*
-   * Note [6]
+   * Note [8]
    * First cycle: master transmitter mode
    */
   restart:
@@ -168,7 +182,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
     case TW_START:
       break;
 
-    case TW_MT_ARB_LOST:	/* Note [7] */
+    case TW_MT_ARB_LOST:	/* Note [9] */
       goto begin;
 
     default:
@@ -176,7 +190,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
 				/* NB: do /not/ send stop condition */
     }
 
-  /* Note [8] */
+  /* Note [10] */
   /* send SLA+W */
   TWDR = sla | TW_WRITE;
   TWCR = _BV(TWINT) | _BV(TWEN); /* clear interrupt to start transmission */
@@ -187,7 +201,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
       break;
 
     case TW_MT_SLA_NACK:	/* nack during select: device busy writing */
-				/* Note [9] */
+				/* Note [11] */
       goto restart;
 
     case TW_MT_ARB_LOST:	/* re-arbitrate */
@@ -196,7 +210,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
     default:
       goto error;		/* must send stop condition */
     }
-  
+
   TWDR = eeaddr;		/* low 8 bits of addr */
   TWCR = _BV(TWINT) | _BV(TWEN); /* clear interrupt to start transmission */
   while ((TWCR & _BV(TWINT)) == 0) ; /* wait for transmission */
@@ -216,7 +230,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
     }
 
   /*
-   * Note [10]
+   * Note [12]
    * Next cycle(s): master receiver mode
    */
   TWCR = _BV(TWINT) | _BV(TWSTA) | _BV(TWEN); /* send (rep.) start condition */
@@ -253,7 +267,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
       goto error;
     }
 
-  for (twcr = _BV(TWINT) | _BV(TWEN) | _BV(TWEA) /* Note [11] */;
+  for (twcr = _BV(TWINT) | _BV(TWEN) | _BV(TWEA) /* Note [13] */;
        len > 0;
        len--)
     {
@@ -276,7 +290,7 @@ ee24xx_read_bytes(uint16_t eeaddr, int len, uint8_t *buf)
 	}
     }
   quit:
-  /* Note [12] */
+  /* Note [14] */
   TWCR = _BV(TWINT) | _BV(TWSTO) | _BV(TWEN); /* send stop condition */
 
   return rv;
@@ -326,7 +340,7 @@ ee24xx_write_page(uint16_t eeaddr, int len, uint8_t *buf)
     return -1;
   begin:
 
-  /* Note 13 */
+  /* Note [15] */
   TWCR = _BV(TWINT) | _BV(TWSTA) | _BV(TWEN); /* send start condition */
   while ((TWCR & _BV(TWINT)) == 0) ; /* wait for transmission */
   switch ((twst = TW_STATUS))
@@ -361,7 +375,7 @@ ee24xx_write_page(uint16_t eeaddr, int len, uint8_t *buf)
     default:
       goto error;		/* must send stop condition */
     }
-  
+
   TWDR = eeaddr;		/* low 8 bits of addr */
   TWCR = _BV(TWINT) | _BV(TWEN); /* clear interrupt to start transmission */
   while ((TWCR & _BV(TWINT)) == 0) ; /* wait for transmission */
@@ -388,7 +402,7 @@ ee24xx_write_page(uint16_t eeaddr, int len, uint8_t *buf)
       switch ((twst = TW_STATUS))
 	{
 	case TW_MT_DATA_NACK:
-	  goto error;		/* device write protected -- Note [14] */
+	  goto error;		/* device write protected -- Note [16] */
 
 	case TW_MT_DATA_ACK:
 	  rv++;
