@@ -123,10 +123,24 @@ the E0, E1, and E2 inputs of the 24Cxx must be grounded.
 
 \par Note [4]
 
+For slow clocks, enable the 2 x U[S]ART clock multiplier, to improve
+the baud rate error.  This will allow a 9600 Bd communication using
+the standard 1 MHz calibrated RC oscillator.  See also the Baud rate
+tables in the datasheets.
+
+\par Note [5]
+
+The datasheet explains why a minimum TWBR value of 10 should be
+maintained when running in master mode.  Thus, for system clocks below
+3.6 MHz, we cannot run the bus at the intented clock rate of 100 kHz
+but have to slow down accordingly.
+
+\par Note [6]
+
 This function is used by the standard output facilities that are
 utilized in this example for debugging and demonstration purposes.
 
-\par Note [5]
+\par Note [7]
 
 In order to shorten the data to be sent over the TWI bus, the 24Cxx
 EEPROMs support multiple data bytes transfered within a single
@@ -136,7 +150,7 @@ request can read the entire device memory if desired (the counter
 would wrap around and start back from 0 when reaching the end of the
 device).
 
-\par Note [6]
+\par Note [8]
 
 When reading the EEPROM, a first device selection must be made with
 write intent (R/~W bit set to 0 indicating a write operation) in order
@@ -150,7 +164,7 @@ bit.  Unlike with many other interrupt sources, this would even be
 required when using a true interrupt routine, since as soon as TWINT
 is re-asserted, the next bus transaction will start.
 
-\par Note [7]
+\par Note [9]
 
 Since the TWI bus is multi-master capable, there is potential for a
 bus contention when one master starts to access the bus.  Normally,
@@ -167,7 +181,7 @@ the entire transfer is going to be restarted.  This will cause a new
 start condition to be initiated, which will normally be delayed until
 the currently active master has released the bus.
 
-\par Note [8]
+\par Note [10]
 
 Next, the device slave is going to be reselected (using a so-called
 repeated start condition which is meant to guarantee that the bus
@@ -176,7 +190,7 @@ address (SLA), but this time with read intent (R/~W bit set to 1) in
 order to request the device slave to start transfering data from the
 slave to the master in the next packet.
 
-\par Note [9]
+\par Note [11]
 
 If the EEPROM device is still busy writing one or more cells after a
 previous write request, it will simply leave its bus interface drivers
@@ -193,7 +207,7 @@ infinite loop.  Thus the maximal number of iterations made until the
 device is declared to be not responding at all, and an error is
 returned, will be limited to MAX_ITER.
 
-\par Note [10]
+\par Note [12]
 
 This is called <em>master receiver mode</em>: the bus master still
 supplies the SCL clock, but the device slave drives the SDA line with
@@ -204,19 +218,19 @@ to the slave that it is going to stop the transfer now.  Assertion of
 ACK is handled by setting the TWEA bit in TWCR when starting the
 current transfer.
 
-\par Note [11]
+\par Note [13]
 
 The control word sent out in order to initiate the transfer of the
 next data packet is initially set up to assert the TWEA bit.  During
 the last loop iteration, TWEA is de-asserted so the client will get
 informed that no further transfer is desired.
 
-\par Note [12]
+\par Note [14]
 
 Except in the case of lost arbitration, all bus transactions must
 properly be terminated by the master initiating a stop condition.
 
-\par Note [13]
+\par Note [15]
 
 Writing to the EEPROM device is simpler than reading, since only a
 master transmitter mode transfer is needed.  Note that the first
@@ -228,7 +242,7 @@ packet, all following packets will be considered data bytes to write
 at the indicated address.  The internal address pointer will be
 incremented after each write operation.
 
-\par Note [14]
+\par Note [16]
 
 24Cxx devices can become write-protected by strapping their ~WC pin to
 logic high.  (Leaving it unconnected is explicitly allowed, and
